docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
/* ... */
/* Site Info-------------------------------------------------------------- */
.header-site-info {
  float: left;
  width: auto;
}

/* Header - Search-------------------------------------------------------------- */
.search-box {
  float: right;
  margin: 0;
  min-width: 220px;
  padding: 5px 0 4px 0;
  width: auto;
}

.search-box-inner {
  
}

/* Wrapper around logo, site name, and slogan */

.header-site-info span {
  display: block;
}

/* Add float here to put logo and site name side by side, also add margins as  needed */

#logo {
  float: left;
  margin-right: 10px;
  vertical-align: middle;
  width: auto;
}

#logo a {
  display: block;
}

/* @end */

/* @group Primary Menu */

/* Add general styles for primary menu here, such as typography, borders, floats,  or spacing above/below */

.primary-menu {
  float: left;
  margin: 0;
  width: auto;
  position: relative;
  z-index: 20;
}

#primary-menu-inner {
  margin-left: 0px;
}

/* styles for Superfish primary menu */

.primary-menu-inner ul.sf-menu {
  
}

.primary-menu-inner ul.sf-menu li {
  margin-bottom: 0px;
}

.not-front .main .main-inner,
.front .main .main-inner {
  padding: 14px 0px;
}

/* @end */

/* @group User Meta - logout/account links in header w/ profile pic */

.view-user-meta {
  float: right;
  width: 180px;
  font-family: "Helvetical Neue",Helvetica,Arial,Sans-serif;
  margin-top: 10px;
}

.view-user-meta .views-field-name span {
  display: block;
  font-size: 1.1em;
  line-height: 1.2em;
  text-align: right;
}

.view-user-meta .views-field-name span.username a {
  color: #69c;
  font-weight: bold;
}

.view-user-meta .views-field-name span.full-name {
  font-size: .9em;
  font-style: normal;
}

.view-user-meta .views-field-picture {
  float: right;
  margin: 0 0 2px 12px;
}

.view-user-meta .views-field-nothing,
.view-user-meta .views-field-nothing-1 {
  float: right;
  margin-bottom: 2px;
  margin-top: 2px;
  padding: 0;
}

.view-user-meta .views-field-nothing a,
.view-user-meta .views-field-nothing-1 a {
  color: #333;
  font-size: 11px;
  line-height: 13px;
  padding: 0;
}

.view-user-meta .views-field-nothing {
  border-left: 1px solid #666;
  clear: both;
  margin-left: 8px;
  padding-left: 8px;
}

.view-user-meta .views-field-name {
  font-size: .9em;
  line-height: 1em;
}

.view-user-meta .views-field-name a {
  color: #333;
}

.view-user-meta .views-field-nothing {
  margin-right: 6px;
  padding-right: 6px;
}

.view-user-meta .views-field-points {
  clear: both;
  text-align: right;
}

.view-user-meta .views-row span.views-field-picture {
  display: block;
  float: right;
}

/* @end */

.sidebar-first .links li,
.sidebar-last .links li {
  border: 0 none;
  display: list-item;
}

.block .content .item-list .pager li {
  display: inline;
  display: inline-block;
}

.block .content ul li.views-row {
  display: block;
}

.block .content .views-row:after {
  clear:both;
  display:block;
  visibility:hidden;
  overflow:hidden;
  height:0 !important;
  line-height:0;
  font-size:xx-large;
  content:" x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x x ";
}

/* User page - Find new friends block*/
.block#block-commons_profile-find_new_friends {
	overflow: visible;
}

/* @group Blocks */
/* Used in profile blocks */
#block-commons_profile-profile_image_links ul.links li {
  border: medium none;
  display: block;
  padding: 0 6px 0 12px;
  width: 90%;
}

#block-commons_profile-profile_image_links ul.links li.userpoints, #block-commons_profile-profile_image_links ul.links li.user_badges  {
  background: none;	
}

.block.block-commons_profile .links .ur_action {
  border: none;
  display: block;
  padding: 0;
  text-align: center;
}

.block.block-commons_profile .links .ur_action a {
  display: inline-block;
  padding: 4px 8px;
}

/* @end */

.node .inner ul,
.panel-pane .inner ul,
.block .inner ul {
  padding-left: 15px;
  margin-left: 0;
}

#primary-menu.block ul {
  padding-left: 0;
}

/* used in right side blocks */
.sidebar-last .block-views .view-content .item-list ul li {
  background: none repeat scroll 0 0 transparent;
  border-bottom: 0 none;
  margin-bottom: 0;
  padding: 0 0 10px 40px;
  position: relative;
  clear: both;
}

.sidebar-last .block-views .view-group-block-events-latest .item-list ul li { /* This is a hack. The pattern for media items in views is broken */
  padding-left: 0;
}

.sidebar-last .block-views .content .view .view-content .views-field-field-group-image-fid,
.sidebar-last .block-views .content .view .view-content .item-list ul li .views-field-picture,
.sidebar-last .block-views .content .view .view-content .views-row .views-field-picture {
  left: 0;
  margin: 0;
  position: absolute;
  width: 30px;
}

/* User profile about page */
.view-profile-about-page label {
  font-weight: bold;
  background: #f2f2f2;
  padding: 5px;
  display: inline-block;
  border-bottom: 1px solid #ddd;
  width: 30%;
}

.view-profile-about-page span.field-content {
  padding-left: 5px;
  display: inline-block;
}

/* Tab Menus   TODO: tab styles?/-------------------------------------------------------------- */

#content-tabs {
  background-color: transparent;
  float: none;
  margin: 15px 0 22px; 
  padding: 0;
}

#breadcrumbs + #content-tabs,
h1 + #content-tabs {
  margin-top: 0;
}

#content-tabs-inner {
  margin: 0;
}

#content-tabs ul.primary,
#content-tabs ul.secondary {
  border-bottom: 2px solid #d1d1d1;
  clear: both;
  float: none;   
}

#content-tabs ul.primary:after,
#content-tabs ul.secondary:after{
	clear: both;
	content: ".";
	display: block;
	height: 0;
	visibility: hidden;
}


#content-tabs ul.primary li,
#content-tabs ul.secondary li {
  border-style: none;
  display: inline;
  float: left;
  font-size: .9em;
  font-weight: normal;
  list-style: none;
  margin: 0 0px;
  padding: 0;
}
/* ... */

